# edfi-api-python

./: .env-sample  .gitignore  README.md  pyproject.toml
project/: database.py  main.py
project/daos/: school.py
project/models/: school.py
project/routers/: school.py
project/schemas/: school.py
project/services/: school.py
