[tool.poetry]
name = "edfi-api-python"
version = "0.1.0"
description = ""
authors = ["Marcos Alcozer <marcos@alcozer.dev>"]
license = "Apache 2"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.1"
firebase-admin = "^5.2.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
uvicorn = "^0.18.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
